# getCString-fix

./: .gitignore  CMakeLists.txt  README.md  about.md  mod.json
src/: main.cpp
